@@ -4,6 +4,7 @@ Version 1.5.7+svn:
    * Fixed a glitch which closed a new dialog on the mouse up event of the old
      dialog (the effect is percieved as the new dialog not showing up).
    * Spacebar closes the dialogs without a scrollbar again.
+   * Pressing escape in a new dialog, behaves like in the old dialogs again.
  * Language and i18n:
    * updated translations: Slovak
  * Networking
